2023 day07 p2 (Java)